Changelog for LedgerSMB 1.2.0

* Removed back-translation of function names for i18n (Seneca)
* Invoice now has an Onhand column (Chris T)
* Added logging module (Jason R)
* Corrected parsing of numbers so that they are multi-run safe (Chris T)
* Added first version of rpm spec from Mads Kiilerich (Chris T)
* Added "1 000.00" number format (Chris T)
* Added session method abstraction (Chris T)
* Added modular tax calculation support (no modules included yet) (Seneca)
* Added experimental TrustCommerce credit card processing (Chris T)
* Merged most of the rest of the SL-POS interface (Chris T)
* Broke out price matrix calls into PriceMatrix.pm (Chris T)
* Added Gentoo ebuilds documentation and metadata (Jayson R).
* POS register now goes from add invoice to add invoice. (Chris T)
* Added pole display and separate cash drawer open calls. (Chris T)
* Added simple text import function for invoices received (PDT's) (Chris T)
* Added whitelist of allowed directories to file editor (Seneca)
* Added script to configure Slony replication (Chris Browne)
* Audited OE.pm and AM.pm for SQL injection problems. (Chris T)
* Forced edited files to have whitelisted extensions and no .. strings (Chris T)
* Added $form->callproc($procname, @args) returns @hashrefs (Chris T)
* Corrected rounding errors (Seneca)
* Audited Form.pm for SQL-injection problems and move to new API (Chris T)
* Code cleanup and template correction (Chris Murtagh)
* New template system (Chris T)
* OE.pm and IS.pm are aware of custom fields (Chris T)

Changelog for LedgerSMB 1.1.1

* Fixed problem with parts_short trigger not being created
* Fixed problem with custom fields functions not being created
* Pg driver is now checked by default. 

Changelog for LedgerSMB 1.1.0

Database
* Added add_custom_field and drop_custom_field functions.
	-- will be more integrated into API next version
* Added utility to partially recover from SQL-Ledger data corruption issues.
* Primary Key added to acc_trans table